a1646486af6ed3cad996de0266b24c8e1390ca9a Fix: Default styling - when buttons flow on to a second line, there should be a small gap between the button rows.
Sync to source repo @a1646486af6ed3cad996de0266b24c8e1390ca9a

--- a/css/buttons.dataTables.css
+++ b/css/buttons.dataTables.css
@@ -215,6 +215,12 @@ div.dt-button-collection span.dt-button-spacer.bar {
   --dtb-processing_filter: drop-shadow(0px 0px 3px black);
 }
 
+div.dt-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 4px;
+  justify-content: center;
+}
 div.dt-buttons > .dt-button,
 div.dt-buttons > div.dt-button-split .dt-button {
   position: relative;
